[package]
name = "nebula-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tracing = { workspace = true }
fontdue = "0.9"
taffy = "0.5"
# Hot reload dependencies
notify = "6.1"
libloading = "0.8"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
# Accessibility dependencies
accesskit = "0.12"
# Performance profiling
puffin = "0.19"
