[package]
name = "tracer-bullet"
version.workspace = true
edition.workspace = true

[dependencies]
nebula-platform = { path = "../nebula-platform" }
nebula-renderer-cpu = { path = "../nebula-renderer-cpu" }
winit = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
